[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "space-repair-assist"
version = "1.0.0"
description = "A system for requesting and fabricating tools or parts for space repair"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
